<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Orientation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">1st button (touch me)</string>
    <string name="button2">2nd button</string>
    <string name="button3">3rd button</string>
    <string name="button4">4th button</string>
    <string name="button5">5th button</string>
    <string name="button6">6th button</string>

</resources>
