<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#CCC">

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:id="@+id/button1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClick"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:id="@+id/button2"
            android:layout_below="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:id="@+id/button3"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button5"
            android:id="@+id/button4"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/button6"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:id="@+id/button5"
            android:layout_below="@+id/button3"
            android:layout_alignLeft="@+id/button3"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button6"
            android:id="@+id/button6"
            android:layout_below="@+id/button4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

    <EditText
            android:id="@+id/editTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button6"
            android:layout_alignLeft="@+id/button6"
            android:layout_marginTop="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/editTest"
            android:layout_alignLeft="@+id/editTest"/>

</RelativeLayout>
